--- a/study_bbs_admin_common/pom.xml
+++ b/study_bbs_admin_common/pom.xml
@@ -70,6 +70,11 @@ relativePath:
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
     </dependencies>
 
 
