--- a/study_bbs_admin_component/study_bbs_admin_activity/pom.xml
+++ b/study_bbs_admin_component/study_bbs_admin_activity/pom.xml
@@ -12,25 +12,17 @@ relativePath:
 -->
     <parent>
         <groupId>com.bbs.cloud.admin</groupId>
-        <artifactId>study_bbs_admin</artifactId>
+        <artifactId>study_bbs_admin_component</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>study_bbs_admin_component</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>study_bbs_component_test</module>
-        <module>study_bbs_admin_service</module>
-        <module>study_bbs_admin_activity</module>
-    </modules>
-    <dependencies>
-        <dependency>
-            <groupId>com.bbs.cloud.admin</groupId>
-            <artifactId>study_bbs_admin_common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <artifactId>study_bbs_admin_activity</artifactId>
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
 </project>
